cleaned df to 1600 for generating junior level code

--- a/DevLeagcy.ipynb
+++ b/DevLeagcy.ipynb
@@ -734,6 +734,35 @@
     {
       "cell_type": "code",
       "source": [
+        "\"\"\"\n",
+        "SL_df = SL_df.loc[SL_df['max_stars_count'] > 1000]\n",
+        "SL_df.shape\n",
+        "\n",
+        "SL_df = SL_df[['lang','content','size','avg_line_length']]\n",
+        "\n",
+        "languages = SL_df[\"lang\"].unique()\n",
+        "\n",
+        "final_df = pd.DataFrame(['lang','content','size','avg_line_length'])\n",
+        "\n",
+        "final_df = (\n",
+        "    SL_df[SL_df[\"lang\"].isin(languages)]\n",
+        "    .groupby(\"lang\", group_keys=False)\n",
+        "    .head(100)\n",
+        "    .reset_index(drop=True)\n",
+        ")\n",
+        "\n",
+        "final_df.to_csv(\"SL_code_cleaned.csv\")\n",
+        "\"\"\""
+      ],
+      "metadata": {
+        "id": "GiZUfsDeYNRj"
+      },
+      "execution_count": 48,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "from google.colab import drive\n",
         "\n",
         "drive.mount('/content/drive')\n"
@@ -743,7 +772,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "991efb57-092d-4b20-8a28-00cbb9400785"
+        "outputId": "fdacf8ed-f906-43e5-e6ae-d08f8b53758e"
       },
       "execution_count": 1,
       "outputs": [
@@ -771,14 +800,14 @@
       "metadata": {
         "id": "c5YFlt_FE-42"
       },
-      "execution_count": 4,
+      "execution_count": 9,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "u0T16bF0gTsB"
+        "id": "6g73xlG9Z_k1"
       },
       "execution_count": null,
       "outputs": []
