--- a/DevLeagcy.ipynb
+++ b/DevLeagcy.ipynb
@@ -757,22 +757,75 @@
       "metadata": {
         "id": "GiZUfsDeYNRj"
       },
-      "execution_count": 48,
+      "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "\"\"\"\n",
+        "languages = test[\"lang\"].unique()\n",
+        "\n",
+        "test = test[['lang','content','size','avg_line_length']]\n",
+        "\n",
+        "test.to_csv(\"SL_final_10k.csv\")\n",
+        "\n",
+        "test = test.reset_index(drop=True)\n",
+        "\n",
+        "for x in range(12):\n",
+        "    current_batch = test[test[\"lang\"].isin(languages)].groupby(\"lang\", group_keys=False).head(100)\n",
+        "\n",
+        "    current_batch.reset_index(drop=True).to_csv(f\"data_{x}.csv\", index=False)\n",
+        "\n",
+        "    test = test.drop(current_batch.index)\n",
+        "\n",
+        "    print(f\"Batch {x} shape: {current_batch.shape}\")\n",
+        "\n",
+        "    test = SL_df.loc[SL_df[\"max_stars_count\"] > 1000]\n",
+        "    \"\"\""
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "WfWTia-qTgIQ",
+        "outputId": "87a6a54a-3116-4adb-ff03-d79ca0c5fb94"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Batch 0 shape: (1600, 5)\n",
+            "Batch 1 shape: (1600, 5)\n",
+            "Batch 2 shape: (1508, 5)\n",
+            "Batch 3 shape: (1454, 5)\n",
+            "Batch 4 shape: (1207, 5)\n",
+            "Batch 5 shape: (1157, 5)\n",
+            "Batch 6 shape: (1100, 5)\n",
+            "Batch 7 shape: (951, 5)\n",
+            "Batch 8 shape: (899, 5)\n",
+            "Batch 9 shape: (548, 5)\n",
+            "Batch 10 shape: (346, 5)\n",
+            "Batch 11 shape: (298, 5)\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
       "source": [
         "from google.colab import drive\n",
         "\n",
-        "drive.mount('/content/drive')\n"
+        "drive.mount('/content/drive')"
       ],
       "metadata": {
         "id": "Q_QL63GJEAQI",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "fdacf8ed-f906-43e5-e6ae-d08f8b53758e"
+        "outputId": "2278a145-e909-49d4-efd4-13ab6f2e5b5d"
       },
       "execution_count": 1,
       "outputs": [
@@ -790,24 +843,117 @@
       "source": [
         "import pandas as pd\n",
         "\n",
-        "SL_file_path = '/content/drive/MyDrive/codedata/SL_codes.csv'\n",
-        "#JL_file_path = '/content/drive/MyDrive/codedata/JL_codes.csv'\n",
+        "JL_file_path = '/content/drive/MyDrive/codedata/junior final/JL_final_df(1600).csv'\n",
+        "SL_file_path = '/content/drive/MyDrive/codedata/SL_final_10k.csv'\n",
         "\n",
         "\n",
         "SL_df = pd.read_csv(SL_file_path)\n",
-        "#JL_df = pd.read_csv(JL_file_path)"
+        "JL_df = pd.read_csv(JL_file_path)"
       ],
       "metadata": {
         "id": "c5YFlt_FE-42"
       },
-      "execution_count": 9,
+      "execution_count": 2,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "final_df = pd.concat([SL_df,JL_df])"
+      ],
       "metadata": {
-        "id": "6g73xlG9Z_k1"
+        "id": "7NKAgzxooZqU"
+      },
+      "execution_count": 3,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!pip install lightning"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "qv9XFe5CJ7V2",
+        "outputId": "76edb37d-357d-4417-c836-c4824826a963"
+      },
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Collecting lightning\n",
+            "  Downloading lightning-2.6.0-py3-none-any.whl.metadata (44 kB)\n",
+            "\u001b[?25l     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m0.0/44.9 kB\u001b[0m \u001b[31m?\u001b[0m eta \u001b[36m-:--:--\u001b[0m\r\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m44.9/44.9 kB\u001b[0m \u001b[31m3.0 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[?25hRequirement already satisfied: PyYAML<8.0,>5.4 in /usr/local/lib/python3.12/dist-packages (from lightning) (6.0.3)\n",
+            "Requirement already satisfied: fsspec<2027.0,>=2022.5.0 in /usr/local/lib/python3.12/dist-packages (from fsspec[http]<2027.0,>=2022.5.0->lightning) (2025.3.0)\n",
+            "Collecting lightning-utilities<2.0,>=0.10.0 (from lightning)\n",
+            "  Downloading lightning_utilities-0.15.2-py3-none-any.whl.metadata (5.7 kB)\n",
+            "Requirement already satisfied: packaging<27.0,>=20.0 in /usr/local/lib/python3.12/dist-packages (from lightning) (25.0)\n",
+            "Requirement already satisfied: torch<4.0,>=2.1.0 in /usr/local/lib/python3.12/dist-packages (from lightning) (2.9.0+cpu)\n",
+            "Collecting torchmetrics<3.0,>0.7.0 (from lightning)\n",
+            "  Downloading torchmetrics-1.8.2-py3-none-any.whl.metadata (22 kB)\n",
+            "Requirement already satisfied: tqdm<6.0,>=4.57.0 in /usr/local/lib/python3.12/dist-packages (from lightning) (4.67.1)\n",
+            "Requirement already satisfied: typing-extensions<6.0,>4.5.0 in /usr/local/lib/python3.12/dist-packages (from lightning) (4.15.0)\n",
+            "Collecting pytorch-lightning (from lightning)\n",
+            "  Downloading pytorch_lightning-2.6.0-py3-none-any.whl.metadata (21 kB)\n",
+            "Requirement already satisfied: aiohttp!=4.0.0a0,!=4.0.0a1 in /usr/local/lib/python3.12/dist-packages (from fsspec[http]<2027.0,>=2022.5.0->lightning) (3.13.3)\n",
+            "Requirement already satisfied: setuptools in /usr/local/lib/python3.12/dist-packages (from lightning-utilities<2.0,>=0.10.0->lightning) (75.2.0)\n",
+            "Requirement already satisfied: filelock in /usr/local/lib/python3.12/dist-packages (from torch<4.0,>=2.1.0->lightning) (3.20.3)\n",
+            "Requirement already satisfied: sympy>=1.13.3 in /usr/local/lib/python3.12/dist-packages (from torch<4.0,>=2.1.0->lightning) (1.14.0)\n",
+            "Requirement already satisfied: networkx>=2.5.1 in /usr/local/lib/python3.12/dist-packages (from torch<4.0,>=2.1.0->lightning) (3.6.1)\n",
+            "Requirement already satisfied: jinja2 in /usr/local/lib/python3.12/dist-packages (from torch<4.0,>=2.1.0->lightning) (3.1.6)\n",
+            "Requirement already satisfied: numpy>1.20.0 in /usr/local/lib/python3.12/dist-packages (from torchmetrics<3.0,>0.7.0->lightning) (2.0.2)\n",
+            "Requirement already satisfied: aiohappyeyeballs>=2.5.0 in /usr/local/lib/python3.12/dist-packages (from aiohttp!=4.0.0a0,!=4.0.0a1->fsspec[http]<2027.0,>=2022.5.0->lightning) (2.6.1)\n",
+            "Requirement already satisfied: aiosignal>=1.4.0 in /usr/local/lib/python3.12/dist-packages (from aiohttp!=4.0.0a0,!=4.0.0a1->fsspec[http]<2027.0,>=2022.5.0->lightning) (1.4.0)\n",
+            "Requirement already satisfied: attrs>=17.3.0 in /usr/local/lib/python3.12/dist-packages (from aiohttp!=4.0.0a0,!=4.0.0a1->fsspec[http]<2027.0,>=2022.5.0->lightning) (25.4.0)\n",
+            "Requirement already satisfied: frozenlist>=1.1.1 in /usr/local/lib/python3.12/dist-packages (from aiohttp!=4.0.0a0,!=4.0.0a1->fsspec[http]<2027.0,>=2022.5.0->lightning) (1.8.0)\n",
+            "Requirement already satisfied: multidict<7.0,>=4.5 in /usr/local/lib/python3.12/dist-packages (from aiohttp!=4.0.0a0,!=4.0.0a1->fsspec[http]<2027.0,>=2022.5.0->lightning) (6.7.0)\n",
+            "Requirement already satisfied: propcache>=0.2.0 in /usr/local/lib/python3.12/dist-packages (from aiohttp!=4.0.0a0,!=4.0.0a1->fsspec[http]<2027.0,>=2022.5.0->lightning) (0.4.1)\n",
+            "Requirement already satisfied: yarl<2.0,>=1.17.0 in /usr/local/lib/python3.12/dist-packages (from aiohttp!=4.0.0a0,!=4.0.0a1->fsspec[http]<2027.0,>=2022.5.0->lightning) (1.22.0)\n",
+            "Requirement already satisfied: mpmath<1.4,>=1.1.0 in /usr/local/lib/python3.12/dist-packages (from sympy>=1.13.3->torch<4.0,>=2.1.0->lightning) (1.3.0)\n",
+            "Requirement already satisfied: MarkupSafe>=2.0 in /usr/local/lib/python3.12/dist-packages (from jinja2->torch<4.0,>=2.1.0->lightning) (3.0.3)\n",
+            "Requirement already satisfied: idna>=2.0 in /usr/local/lib/python3.12/dist-packages (from yarl<2.0,>=1.17.0->aiohttp!=4.0.0a0,!=4.0.0a1->fsspec[http]<2027.0,>=2022.5.0->lightning) (3.11)\n",
+            "Downloading lightning-2.6.0-py3-none-any.whl (845 kB)\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m846.0/846.0 kB\u001b[0m \u001b[31m27.0 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[?25hDownloading lightning_utilities-0.15.2-py3-none-any.whl (29 kB)\n",
+            "Downloading torchmetrics-1.8.2-py3-none-any.whl (983 kB)\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m983.2/983.2 kB\u001b[0m \u001b[31m61.9 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[?25hDownloading pytorch_lightning-2.6.0-py3-none-any.whl (849 kB)\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m849.5/849.5 kB\u001b[0m \u001b[31m56.1 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[?25hInstalling collected packages: lightning-utilities, torchmetrics, pytorch-lightning, lightning\n",
+            "Successfully installed lightning-2.6.0 lightning-utilities-0.15.2 pytorch-lightning-2.6.0 torchmetrics-1.8.2\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import torch\n",
+        "from torch import dataset\n",
+        "import lightning.pytorch as pl\n",
+        "from lightning.pytorch import trainer,lightningModule\n",
+        "from sklearn.model_selection import train_test_split\n",
+        "\n",
+        "class codedataset(dataset):\n",
+        "  def __init__(self,code_df):\n",
+        "    self.code_df = code_df\n",
+        "\n",
+        "  def __len__(self):\n",
+        "    return  len(self.code_df)\n",
+        "\n",
+        "  def __getitem__(self,idx):\n",
+        "    lang = self.code_df.iloc[idx]['lang']\n",
+        "    content = self.code_df.iloc[idx]['content']\n",
+        "    score = self.code_df.iloc[idx]['score']\n",
+        "    return lang,content,score\n"
+      ],
+      "metadata": {
+        "id": "UuQbIrZAGjkQ"
       },
       "execution_count": null,
       "outputs": []
