final structure for data processing

--- a/DevLeagcy.ipynb
+++ b/DevLeagcy.ipynb
@@ -934,12 +934,12 @@
       "cell_type": "code",
       "source": [
         "import torch\n",
-        "from torch import dataset\n",
+        "from torch.utils.data import Dataset,DataLoader\n",
         "import lightning.pytorch as pl\n",
-        "from lightning.pytorch import trainer,lightningModule\n",
+        "from lightning.pytorch import trainer,LightningModule\n",
         "from sklearn.model_selection import train_test_split\n",
         "\n",
-        "class codedataset(dataset):\n",
+        "class codedataset(Dataset):\n",
         "  def __init__(self,code_df):\n",
         "    self.code_df = code_df\n",
         "\n",
@@ -950,10 +950,40 @@
         "    lang = self.code_df.iloc[idx]['lang']\n",
         "    content = self.code_df.iloc[idx]['content']\n",
         "    score = self.code_df.iloc[idx]['score']\n",
-        "    return lang,content,score\n"
+        "    return lang,content,score"
       ],
       "metadata": {
         "id": "UuQbIrZAGjkQ"
+      },
+      "execution_count": 9,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "class codeModule(LightningModule):\n",
+        "  def __init__(self,train_dataset,valid_dataset,batch_size=8,num_works=2):\n",
+        "    self.train_dataset = train_dataset\n",
+        "    self.valid_dataset = valid_dataset\n",
+        "    self.batch_size = batch_size\n",
+        "    self.num_works= num_works\n",
+        "\n",
+        "  def prepare_data(self):\n",
+        "    #data -> tokens (tokenization)\n",
+        "    pass\n",
+        "\n",
+        "  def train_module(self):\n",
+        "    train_loader = DataLoader(self.train_dataset,batch_size = self.batch_size,num_works = self.num_works)\n",
+        "    return train_loader\n",
+        "\n",
+        "  def valid_module(self):\n",
+        "    valid_loader = DataLoader(self.valid_dataset,batch_size = self.batch_size,num_works = self.num_works)\n",
+        "    return valid_loader\n",
+        "\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "EfhTgISILu-_"
       },
       "execution_count": null,
       "outputs": []
